@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/12/22
+	* Simplified function agitcheck so it isn't crash prone. Now it takes no
+	  arguments, and will return whether WoE is on or not.
 	* Now when you specify a max level beyond what the exp table has, the last
 	  entry of the exp table will be duplicated to fill in the remaining levels.
 	  [Skotlex]
