@@ -33,6 +33,10 @@ KarLaeda
 
 Date		Added
 ======
+
+2006/12/22
+	* Corrected scripts to use the new format of agitcheck
+	* Simplified the global function "getJobName" [Skotlex]
 2006/12/19
 	* Now root functions calls can have parenthesis (will take any parenthesis
 	  after the function as the start of the argument list).
